bindings/lisp/fa/fa.lisp

(in-package :faudio)
(defcfun (fa-version "fa_fa_version") list)
(defcfun (fa-version-string "fa_fa_version_string") string)
(defcfun (fa-initialize "fa_fa_initialize") :void)
(defcfun (fa-terminate "fa_fa_terminate") :void)
(defctype fa-log-func (:pointer (:pointer :void)))
(defcfun (fa-set-log-file "fa_fa_set_log_file") :void (a string))
(defcfun (fa-set-log-std "fa_fa_set_log_std") :void)
(defcfun (fa-set-log "fa_fa_set_log") :void (a fa-log-func) (b ptr))
(defcfun (fa-log "fa_fa_log") :void (a ptr) (b error))
(defcfun (fa-log-info "fa_fa_log_info") :void (a string))
(defcfun (fa-log-warning "fa_fa_log_warning") :void (a string))
(defcfun (fa-log-error "fa_fa_log_error") :void (a string))
(defcfun (fa-log-info-from "fa_fa_log_info_from") :void (a string) (b string))
(defcfun (fa-log-warning-from "fa_fa_log_warning_from") :void (a string) (b string))
(defcfun (fa-log-error-from "fa_fa_log_error_from") :void (a string) (b string))
(defcfun (fa-dlog "fa_fa_dlog") :void (a ptr) (b error))
(defcfun (fa-dlog-info "fa_fa_dlog_info") :void (a string))

